objects/MH_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Terms__c</fullName>
        <formula>IF( Account__r.MH_Terms__c = &apos;02&apos;, &quot;Net 10 days&quot;,
IF( Account__r.MH_Terms__c = &apos;03&apos;, &quot;Net 15 days&quot;,
IF( Account__r.MH_Terms__c = &apos;04&apos;, &quot;Net 30 days&quot;,
IF( Account__r.MH_Terms__c = &apos;05&apos;, &quot;Net 45 days&quot;,
IF( Account__r.MH_Terms__c = &apos;06&apos;, &quot;Net 60 days&quot;,
IF( Account__r.MH_Terms__c = &apos;07&apos;, &quot;Net 75 days&quot;,
IF( Account__r.MH_Terms__c = &apos;08&apos;, &quot;Net 90 days&quot;,
IF( Account__r.MH_Terms__c = &apos;09&apos;, &quot;Net 120 days&quot;,
IF( Account__r.MH_Terms__c = &apos;10&apos;, &quot;Net 180 days&quot;,
IF( Account__r.MH_Terms__c = &apos;11&apos;, &quot;2% 10 days net 30&quot;,
IF( Account__r.MH_Terms__c = &apos;12&apos;, &quot;4% 10 days net 30&quot;,
IF( Account__r.MH_Terms__c = &apos;13&apos;, &quot;Net 20 days&quot;,
IF( Account__r.MH_Terms__c = &apos;14&apos;, &quot;Net 25 days&quot;,
IF( Account__r.MH_Terms__c = &apos;15&apos;, &quot;Net 38 days&quot;, &quot;Due Upon Receipt&quot;))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Cleanup</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <formula>IF(ISBLANK(TEXT( Work_Order__r.SVMXC__Billing_Type__c )), TEXT( Work_Order__r.SVMXC__Component__r.Call_Type__c), TEXT( Work_Order__r.SVMXC__Billing_Type__c ))

/*IF(ISBLANK(TEXT(Work_Order__r.SVMXC__Component__r.Call_Type__c)),  TEXT( Location__r.Call_Type__c),  TEXT(Work_Order__r.SVMXC__Component__r.Call_Type__c))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <description>Sales Tax certificate value from the work order. Passed to Avatax to indicate that the work is non-taxable.</description>
        <formula>Work_Order__r.Certificate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Certificate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>IF(ISBLANK(Work_Order__r.SVMXC__Service_Group__c ),
Work_Order__r.SVMXC__Group_Member__r.SVMXC__Service_Group__r.Company__c,
Work_Order__r.SVMXC__Service_Group__r.Company__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumed_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumed From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Invoices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_P_O__c</fullName>
        <label>Customer P.O.</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_and_Time__c</fullName>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_Line_ic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Line?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Details_Cost__c</fullName>
        <label>Invoice Details Cost</label>
        <summarizedField>MH_Invoice_Details__c.Detail_Line_Cost__c</summarizedField>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Details_Revenue__c</fullName>
        <label>Invoice Details Revenue</label>
        <summarizedField>MH_Invoice_Details__c.Total_Line_Price__c</summarizedField>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Details_Sub_Total__c</fullName>
        <label>Invoice Details Sub-Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Margin__c</fullName>
        <formula>Invoice_Details_Revenue__c  -  Invoice_Details_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Sales_Tax_Roll_up__c</fullName>
        <formula>Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Sales Tax Roll-up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Terms_c__c</fullName>
        <description>This fills the terms field from the Account record</description>
        <label>Invoice Terms</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Rollup_1__c</fullName>
        <formula>Invoice_Sales_Tax_Roll_up__c + Invoice_Total_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Rollup__c</fullName>
        <label>Invoice Item Total</label>
        <summarizedField>MH_Invoice_Details__c.Total_Line_Price__c</summarizedField>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_formula__c</fullName>
        <description>Total invoice including sales tax</description>
        <formula>Sub_Total__c +  Total_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Time__c</fullName>
        <label>Labor Time</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Address_c__c</fullName>
        <description>Lists address of Location for invoicing purposes</description>
        <label>Location Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City_c__c</fullName>
        <description>This fills the Location City to the Invoice detail</description>
        <label>Location City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State_c__c</fullName>
        <description>This fills Location State on the Invoice detail</description>
        <label>Location State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_c__c</fullName>
        <description>This fills Location Zip on the Invoice detail</description>
        <label>Location Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_to_Period__c</fullName>
        <label>Post-to-Period</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Service__c</fullName>
        <description>Recommended service field from WO record</description>
        <label>Recommended Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SL_Invoice_Date_c__c</fullName>
        <description>Date field used for determining when a work order will show as being invoiced regardless of when it is actually being invoiced</description>
        <inlineHelpText>This field is the back-date of a work order for invoicing when it is being invoiced on the last day of the month or the first few days of the next month and it needs billed in the previous month</inlineHelpText>
        <label>SL Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SL_Invoice_ID__c</fullName>
        <description>ID from SL integration.</description>
        <inlineHelpText>ID from SL integration.</inlineHelpText>
        <label>SL Invoice ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Status__c</fullName>
        <description>Status returned from SL. B=Billed, R=Reversed.</description>
        <inlineHelpText>Status returned from SL.</inlineHelpText>
        <label>SL Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Work_Performed_c__c</fullName>
        <description>Work Performed field from WO record</description>
        <label>SP Work Performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segment_Formula__c</fullName>
        <formula>IF(ISBLANK( Work_Order__r.SVMXC__Group_Member__c ), 
TEXT(Work_Order__r.SVMXC__Service_Group__r.Segment__c), 
TEXT(Work_Order__r.SVMXC__Group_Member__r.SVMXC__Service_Group__r.Segment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Used to hold the segment that the work order is related to. Because the segment can come from either the technician&gt;Sales Team or the Sales Team fields on the work order, it is easier for integration purposes to set the values here when creating an invoice</description>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Notes_c__c</fullName>
        <description>Text area (32k character) for Service Coordinators to write notes for invoicing</description>
        <inlineHelpText>Text area (32k character) for Service Coordinators to write notes for invoicing</inlineHelpText>
        <label>Service Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_Address_ic__c</fullName>
        <description>Address field for the Service Team</description>
        <label>Service Team Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_City_ic__c</fullName>
        <description>City field for Service Team on Invoice</description>
        <label>Service Team City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_Fax_id__c</fullName>
        <description>Pull the Service Team fax number into the Invoice master detail for addition to output documentation</description>
        <label>Service Team Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Team_Legal_Name__c</fullName>
        <description>Legal name of the Service Team entity for invoicing purposes</description>
        <label>Service Team Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Team_Phone_id__c</fullName>
        <description>Pulls Service Team phone number into Invoice master detail for addition to the output documentation</description>
        <label>Service Team Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Team_State_ic__c</fullName>
        <description>State field of Service Team on Invoice</description>
        <label>Service Team State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_Zip_ic__c</fullName>
        <description>Zip field for Service Team on Invoice</description>
        <label>Service Team Zip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_ic__c</fullName>
        <description>Service Team field on Invoice</description>
        <label>Service Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time__c</fullName>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for integration (depends on tax details).</description>
        <inlineHelpText>Status for integration (depends on tax details).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Billed</fullName>
                    <default>true</default>
                    <label>Not Billed</label>
                </value>
                <value>
                    <fullName>In-Batch</fullName>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <description>summary of line extended price of work details. Extended price is populated via apex class creating invoice from work order</description>
        <label>Sub Total</label>
        <summarizedField>MH_Invoice_Details__c.Total_Line_Price__c</summarizedField>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supercenter_Formula__c</fullName>
        <formula>IF(ISBLANK( Work_Order__r.SVMXC__Group_Member__c  ), 
TEXT(Work_Order__r.SVMXC__Service_Group__r.Super_Center__c), 
TEXT(Work_Order__r.SVMXC__Group_Member__r.SVMXC__Service_Group__r.Super_Center__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supercenter__c</fullName>
        <description>Used to hold the supercenter that the work order is related to. Because the supercenter can come from either the technician&gt;Sales Team or the Sales Team fields on the work order, it is easier for integration purposes to set the values here when creating an invoice</description>
        <label>Supercenter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Added__c</fullName>
        <description>Count detail records where Sales Tax is null.  Switch Status on Invoice when Tax Updated = 0.</description>
        <label>Tax Added</label>
        <summaryFilterItems>
            <field>MH_Invoice_Details__c.Sales_Tax__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <description>rollup summary of the total tax of all invoice details. Tax is populated via call to Avatax.</description>
        <label>Total Tax</label>
        <summarizedField>MH_Invoice_Details__c.Sales_Tax__c</summarizedField>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Voucher_Roll_Up_Total__c</fullName>
        <label>Voucher Roll-Up Total</label>
        <summarizedField>MH_Invoice_Details__c.Total_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>MH_Invoice_Details__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>Rental - Service and Remodel, Pass Through Parts, Pass Through Labor, Pass Through Freight, Pass Through Rentals,, Asset Mgmt Fees</value>
        </summaryFilterItems>
        <summaryForeignKey>MH_Invoice_Details__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Voucher__c</fullName>
        <description>Determines if an invoice should be on a voucher or not. Value sent to SL via scribe</description>
        <formula>IF (  
 ( Supercenter_Formula__c  = &apos;TFS&apos; &amp;&amp;  
   Segment_Formula__c  = &apos;TFS&apos;   &amp;&amp;   
  ISPICKVAL( Work_Order__r.SVMXC__Order_Type__c, &apos;Fleet Maintenance (TFS)&apos;))
  &amp;&amp; NOT(Work_Order__r.TFS_AMF_WO__c = TRUE) , 
TRUE,
FALSE)

/*IF (  
 Supercenter__c = &apos;TFS&apos; &amp;&amp;  
 Segment__c = &apos;TFS&apos; &amp;&amp; 
 ISPICKVAL( Location__r.Super_Center__c, &apos;TFS&apos;) &amp;&amp;
 ISPICKVAL( Location__r.Segment__c, &apos;TFS&apos;) &amp;&amp;
 ISPICKVAL( Location__r.Call_Type__c, &apos;TFS&apos;) &amp;&amp;
 ISPICKVAL( Work_Order__r.SVMXC__Order_Type__c, &apos;Fleet Maintenance (TFS)&apos;), 
TRUE,
FALSE)*/</formula>
        <label>Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WO_Doc_Number__c</fullName>
        <description>Field to hold the document number coming from the Work Order for NMS/TFS invoicing</description>
        <label>WO Doc Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Labor_Total__c</fullName>
        <formula>Work_Order__r.Labor_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Labor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WO_Order_Type__c</fullName>
        <formula>TEXT( Work_Order__r.SVMXC__Order_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Parts_Total__c</fullName>
        <formula>Work_Order__r.Parts_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Parts Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WO_TFS_Tax_Total__c</fullName>
        <formula>Work_Order__r.Tax_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO TFS Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Description__c</fullName>
        <label>Work Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Work Order this invoice was created from.</description>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>ABM_Invoices_Billed_2017</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>Invoice_Total_formula__c</columns>
        <columns>Invoice_Margin__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,Void</value>
        </filters>
        <filters>
            <field>SL_Invoice_Date_c__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Date_Invoiced__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>ABM</value>
        </filters>
        <label>ABM Invoices Billed 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_Reversed_Invoices</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>Location__c</columns>
        <columns>Work_Order__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Invoice_Total_Rollup_1__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Void</value>
        </filters>
        <label>All Reversed Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>Invoice_Total_formula__c</columns>
        <columns>Invoice_Margin__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,In-Batch</value>
        </filters>
        <filters>
            <field>Service_Team_ic__c</field>
            <operation>notEqual</operation>
            <value>Miner Fleet Management</value>
        </filters>
        <filters>
            <field>Date_Invoiced__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <label>INVOICES BILLED - DATE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_Denver</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Invoice_Total_formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed</value>
        </filters>
        <filters>
            <field>Service_Team_ic__c</field>
            <operation>equals</operation>
            <value>TMC - SW Denver</value>
        </filters>
        <filters>
            <field>Date_Invoiced__c</field>
            <operation>greaterThan</operation>
            <value>9/30/2017</value>
        </filters>
        <label>INVOICES BILLED - DATE Denver</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_June</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>Invoice_Total_formula__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>SL_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,Void</value>
        </filters>
        <filters>
            <field>Service_Team_ic__c</field>
            <operation>notEqual</operation>
            <value>Total Fleet Solutions</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>June Kulick</value>
        </filters>
        <label>INVOICES BILLED - DATE June billed and r</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_MCT</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Invoice_Total_Rollup_1__c</columns>
        <columns>Invoice_Margin__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,In-Batch</value>
        </filters>
        <filters>
            <field>Service_Team_ic__c</field>
            <operation>equals</operation>
            <value>TMC - CT San Antonio,TMC - CT Corpus Christi,TMC - CT Austin</value>
        </filters>
        <filters>
            <field>SL_Invoice_Date_c__c</field>
            <operation>greaterThan</operation>
            <value>12/1/2017</value>
        </filters>
        <label>INVOICES BILLED - DATE MCT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_MCT_HEB</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Invoice_Total_Rollup_1__c</columns>
        <columns>Invoice_Margin__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,In-Batch</value>
        </filters>
        <filters>
            <field>Service_Team_ic__c</field>
            <operation>equals</operation>
            <value>TMC - CT San Antonio,TMC - CT Corpus Christi,TMC - CT Austin</value>
        </filters>
        <filters>
            <field>SL_Invoice_Date_c__c</field>
            <operation>greaterThan</operation>
            <value>12/1/2017</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>HEB Management</value>
        </filters>
        <label>INVOICES BILLED - DATE MCT HEB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_MEP</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Invoice_Total_formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,In-Batch</value>
        </filters>
        <filters>
            <field>Service_Team_ic__c</field>
            <operation>equals</operation>
            <value>TMC - SW El Paso</value>
        </filters>
        <filters>
            <field>SL_Invoice_Date_c__c</field>
            <operation>greaterThan</operation>
            <value>8/1/2017</value>
        </filters>
        <filters>
            <field>WO_Order_Type__c</field>
            <operation>equals</operation>
            <value>Sales-EQUIP</value>
        </filters>
        <label>INVOICES BILLED - DATE MEP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_MFL</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Invoice_Total_formula__c</columns>
        <columns>Invoice_Margin__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,In-Batch</value>
        </filters>
        <filters>
            <field>SL_Invoice_Date_c__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>Segment__c</field>
            <operation>equals</operation>
            <value>tampa,Miami,Orlando,Jacksonville,Tallahassee</value>
        </filters>
        <label>INVOICES BILLED - DATE MFL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INVOICES_BILLED_DATE_MFL_Kevin_Mungal</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>SL_Invoice_Date_c__c</columns>
        <columns>Post_to_Period__c</columns>
        <columns>WO_Order_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Team_ic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Invoice_Total_formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billed,In-Batch</value>
        </filters>
        <filters>
            <field>SL_Invoice_Date_c__c</field>
            <operation>greaterThan</operation>
            <value>8/1/2017</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>kevin mungal</value>
        </filters>
        <label>INVOICES BILLED - DATE MFL Kevin Mungal</label>
        <language>en_US</language>
    </listViews>
</CustomObject>